# slotThe.github.io

./: .gitattributes  .gitignore  .gitmodules  404.html  BSD-3.txt  Makefile  README.md  Sidenote.hs  about.md  blog.html  build.sh  cabal.project  cabal.project.freeze  compress-fonts.sh  ct2024.md  flake.nix  free-software.md  hsha.md  impressum.md  index.html  key.txt  mackey-functors.md  myblog.cabal  research.md  robots.txt  site.hs  site.md  stack.yaml  tonys-site.cabal
bib/: bibliography.bib  style.csl
css/: colours.css  default.css  fonts.css  navbar.css  pygments.css  sidenotes.css  skin.css  tc.css
docs/: 404.html  CNAME  about.html  atom-BQN.xml  atom-LaTeX.xml  atom-anki.xml  atom-array-lang.xml  atom-c.xml  atom-emacs.xml  atom-hakyll.xml  atom-hardware.xml  atom-haskell.xml  atom-j.xml  atom-k.xml  atom-maths.xml  atom-nix.xml  atom-rust.xml  atom-xmonad.xml  atom.xml  blog.html  ct2024.html  ct2025.html  ferrara2024.html  free-software.html  higher-structures-for-hopf-algebras.html  hopf25.html  hsha.html  impressum.html  index.html  key.txt  mackey-functors.html  posts.html  research.html  site.html
posts/: 2022-05-25-calling-emacs-from-xmonad.md  2022-10-22-emacs-potpourri.md  2022-11-05-vertical-previews.md  2022-11-30-package-vc-install.md  2022-12-22-vc-use-package.md  2023-01-10-duality-in-monoidal-categories.md  2023-01-14-orgmode-refiling.md  2023-01-21-pygmentising-hakyll.md  2023-01-27-block-sidenotes.md  DUCK.md  anki-latex.md  aoc-in-bqn.md  atreus-review.md  block-sidenotes.md  bqn-csv.md  bqn-json.md  bqn-sudoku.md  bqn-sudoku.org  calling-emacs-from-xmonad.md  change-inner.md  day-convolution-for-operads.md  duality-in-monoidal-categories.md  eglot-hover.md  emacs-potpourri.md  eshell-zsh-history.md  fixing-lsp-mode.md  hakyll-and-bibtex.md  interactive.md  j-incunabulum.md  join-lines-comments.md  katex-with-hakyll.md  latex-change-env-0.3.md  my-phd-workflow.md  notmuch-subject.md  orgmode-refiling.md  package-vc-install.md  phd-typesetting.md  pretty-latex.md  (+15 more)
src/: site.hs  (+1 more)
(+126 files in other folders)
