name:               myblog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:    Sidenote
  build-depends:    base   == 4.*
                  , hakyll == 4.15.*
                  , mtl >= 2.2.2
                  , pandoc
                  , pandoc-types >= 1.22.2.1
                  , tagsoup
                  , text
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
