name:               tonys-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src
  main-is:          site.hs
  build-depends:    base   == 4.*
                  , hakyll >= 4.15
                  , mtl >= 2.2.2
                  , pandoc
                  , pandoc-types >= 1.22.2.1
                  , pandoc-sidenote
                  , skylighting
                  , tagsoup
                  , text
                  , containers
                  , process
                  , hashable
                  , time
  ghc-options:    -Weverything
                  -Wno-implicit-prelude
                  -Wno-missing-import-lists
                  -Wno-unused-packages
                  -Wno-missing-safe-haskell-mode
                  -Wno-all-missed-specialisations
                  -Wno-unsafe
                  -Wno-prepositive-qualified-module
                  -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
